--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,17 +5,21 @@ layout: wrapper
 
 <div class="container-fluid">
     <div class="text-center">
-        <img src="../assets/logo.png" class="rounded" alt="tafirest" width="200px">
+        <img id="logo" src="{{site_url}}/assets/images/logo.png" class="rounded" alt="tafirest"> 
+        
+        <p>
+            <h3>Welcome to this digital space!</h3>
+        </p>
 
-        <h3>Welcome to this digital space!</h3>
         <p>Technology is a vain imitation of nature. Here, we acknowledge that fact. We have a holistic approach to
             software design.</p>
 
         <p>Get in touch with us.</p>
         <hr>
-
+        
         {{content}}
-
+        
+        <span><a href="https://www.instagram.com/tafirest/"><i class="bi bi-instagram"></i></a></span>
         <span><a href="https://www.facebook.com/tafirest"><i class="bi bi-facebook"></i></a></span>
         <span><a href="https://twitter.com/tafirest"><i class="bi bi-twitter"></i></a></span>
         <span><a href="https://github.com/tafirest"><i class="bi bi-github"></i></a></span>
