--- a/_layouts/wrapper.html
+++ b/_layouts/wrapper.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="icon" type="image/x-icon" href="logo.png">
+    <link rel="icon" type="image/x-icon" href="{{site_url}}/assets/images/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -12,26 +12,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css">
-    <style>
-        #container {
-            font-family: Lato;
-            padding: 5%;
-        }
+    <link rel="stylesheet" href="{{site_url}}/assets/css/styles.css">
 
-        a, .nav-link {
-            color: #333;
-            font-size: 16px;
-            text-decoration: none;
-        }
-
-        a:hover {
-            color: rgb(150, 121, 121);
-        }
-
-        .card-wrapper {
-            padding: 10px;
-        }
-    </style>
     <title>tafirest</title>
 </head>
 
@@ -42,9 +24,6 @@
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/blog/index.html">Blog</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/about/index.html">About</a>
         </li>
     </ul>
     <div id="container" class="container">
