--- a/_layouts/wrapper.html
+++ b/_layouts/wrapper.html
@@ -20,10 +20,10 @@
 <body>
     <ul class="nav">
         <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/">Tafirest</a>
+            <a class="nav-link active" aria-current="page" href="{{site_url}}/">Tafirest</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="blog/index.html">Blog</a>
+            <a class="nav-link" href="{{site_url}}/blog/index.html">Blog</a>
         </li>
     </ul>
     <div id="container" class="container">
