--- a/_layouts/wrapper.html
+++ b/_layouts/wrapper.html
@@ -23,7 +23,7 @@
             <a class="nav-link active" aria-current="page" href="{{site_url}}/">Tafirest</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="{{site_url}}/blog/index.html">Blog</a>
+            <a class="nav-link" href="{{site_url}}/blog.html">Blog</a>
         </li>
     </ul>
     <div id="container" class="container">
