--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,10 +33,11 @@ layout: wrapper
     <div class="post-content e-content" itemprop="articleBody">
  
       <div class="row">
-        <div class="col-2"></div>
-        <div class="col-8 blog-post">
+        <div class="col-lg-2 col-sm-0 col-md-0"></div>
+        <div class="col-lg-8 col-md-12 col-sm-12 blog-post">
           {{ content }}
         </div>
+        <div class="col-lg-2 col-md-0 col-sm-0"></div>
       </div>
     </div>
   
