--- a/_layouts/wrapper.html
+++ b/_layouts/wrapper.html
@@ -25,6 +25,12 @@
         <li class="nav-item">
             <a class="nav-link" href="{{site_url}}/blog.html">Blog</a>
         </li>   
+        <li class="nav-item">
+            <a class="nav-link" href="{{site_url}}/products.html">Products</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{{site_url}}/about.html">About</a>
+        </li>   
     </ul>
     <div id="container" class="container">
         {{content}}
